# rust-sbert

./: .dockerignore  .gitignore  .travis.yml  Cargo.toml  Dockerfile  README.md  build.rs
.github/workflows/: rust.yml
benches/: bench_distilroberta.rs  bench_sbert.rs
proto/: service.proto
src/: client.rs  distilroberta.rs  lib.rs  main.rs  sbert.rs  server.rs
src/layers/: dense.rs  mod.rs  pooling.rs
src/models/: character_bert.rs  distilroberta.rs  mod.rs  sbert.rs
src/tokenizers/: hf_tokenizers.rs  hf_tokenizers_impl.rs  mod.rs  rust_tokenizers.rs  rust_tokenizers_impl.rs  rust_tokenizers_sentencepiece.rs  tokenizer.rs
tests/: test_character_bert.rs  test_distilroberta.rs  test_sbert.rs
utils/: Dockerfile  prepare_character_bert.py  prepare_distilbert.py  prepare_distilroberta.py  prepare_models.py  requirements.txt  test_sbert.py
