[package]
name = "sbert"
version = "0.4.0"
authors = ["Chady Dimachkie <cpcdoy@gmail.com>"]
edition = "2018"
description = "Rust implementation of Sentence Bert (SBert) and other transformers"
repository = "https://github.com/cpcdoy/rust-sbert"
keywords = ["nlp", "embedding", "bert", "sbert", "transformers"]
license = "Apache-2.0"
readme = "README.md"
include = [
    "src/",
    "Cargo.toml",
    "build.rs",
]

[dependencies]
lazy_static = "1.4"
log = "0.4"
num_cpus = "1.13"
prost = "0.6"
rayon = "1.5"
rust-bert = { git = "https://github.com/guillaume-be/rust-bert.git", rev = "629e194f844fb831b9f618f03b1fc91a8eaf9330" }
rust_tokenizers = "6.0"
serde = "1.0"
strum = "0.20"
strum_macros = "0.20"
tch = "0.3"
thiserror = "1.0"
tokenizers = "0.10.1"
#tokenizers = { git = "https://github.com/huggingface/tokenizers.git" } #, rev="c36ac0bfdf1a24c61afab1c9c44f0a013fed0a7d"}
torch-sys = "0.3"

[dev-dependencies]
criterion = "0.3"
rand = "0.7"

[features]
doc-only = ["tch/doc-only"]
all-tests = []

[package.metadata.docs.rs]
features = [ "doc-only" ]

[lib]
name = "sbert"
path = "src/lib.rs"
crate-type = ["lib"]

[[bin]]
name = "convert-tensor"
path = "src/bin/convert-tensor.rs"
doc = false

[[test]]
name = "character_bert_test"
path = "tests/test_character_bert.rs"
doc = false

[[test]]
name = "sbert_test"
path = "tests/test_sbert.rs"
doc = false

[[test]]
name = "distilroberta_test"
path = "tests/test_distilroberta.rs"
doc = false

[[bench]]
name = "sbert_bench"
path = "benches/bench_sbert.rs"
harness = false
doc = false

[[bench]]
name = "distilroberta_bench"
path = "benches/bench_distilroberta.rs"
harness = false
doc = false