[package]
name = "sbert"
version = "0.5.0"
authors = ["Chady Dimachkie <cpcdoy@gmail.com>"]
edition = "2018"
description = "Rust implementation of Sentence Bert (SBert)"
repository = "https://github.com/cpcdoy/rust-sbert"
keywords = ["nlp", "embedding", "bert", "sbert", "transformers"]
license = "Apache-2.0"
readme = "README.md"
include = ["src/", "Cargo.toml", "build.rs"]

[dependencies]
lazy_static = "1.4"
log = "0.4"
num_cpus = "1.13"
prost = "0.9"
rayon = "1.5"
rust-bert = { git = "https://github.com/guillaume-be/rust-bert", rev = "29f9a7a" }
rust_tokenizers = "7.0"
serde = "1.0"
strum = "0.23"
strum_macros = "0.23"
tch = "0.15.0"
thiserror = "1.0"
tokenizers = "0.15"
torch-sys = "0.15.0"

[dev-dependencies]
criterion = "0.3"
rand = "0.8"

[features]
doc-only = ["tch/doc-only"]
all-tests = []

[package.metadata.docs.rs]
features = ["doc-only"]

[lib]
name = "sbert"
path = "src/lib.rs"
crate-type = ["lib"]

[[bin]]
name = "convert-tensor"
path = "src/bin/convert-tensor.rs"
doc = false

[[test]]
name = "sbert_test"
path = "tests/test_sbert.rs"
doc = false

[[test]]
name = "distilroberta_test"
path = "tests/test_distilroberta.rs"
doc = false

[[bench]]
name = "sbert_bench"
path = "benches/bench_sbert.rs"
harness = false
doc = false

[[bench]]
name = "distilroberta_bench"
path = "benches/bench_distilroberta.rs"
harness = false
doc = false
